fixed about page. added arrow navigation to chapter pages that jump between chapters as well. removed first non-numeric chapter. styled chapter page.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+p .v {
+  color: hsl(var(--muted-foreground));
+  vertical-align: super;
+  margin-right: 4px;
+  font-size: 0.8em;
+}
